final version 1.0 修改了pom文件，指定主类，修改两个main类，加入命令行选项

--- a/seu-lex/pom.xml
+++ b/seu-lex/pom.xml
@@ -16,4 +16,20 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>LexMain</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
