--- a/seu-yacc/pom.xml
+++ b/seu-yacc/pom.xml
@@ -59,7 +59,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
-                    <createDependencyReducedPom>true</createDependencyReducedPom>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                     <artifactSet>
                         <includes>
                             <include>net.sourceforge.jexcelapi:jxl</include>
